argocd-apps/kiali/kiali.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiali
  namespace: kiali
  labels:
    app: kiali
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiali
  template:
    metadata:
      labels:
        app: kiali
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: workload
                    operator: In
                    values: [platform]
      serviceAccountName: kiali
      containers:
        - name: kiali
          image: quay.io/kiali/kiali:v1.76
          imagePullPolicy: IfNotPresent
          args:
            - --config=/kiali-configuration/config.yaml
          ports:
            - name: http
              containerPort: 20001
          volumeMounts:
            - name: kiali-configuration
              mountPath: /kiali-configuration
      volumes:
        - name: kiali-configuration
          configMap:
            name: kiali
---
apiVersion: v1
kind: Service
metadata:
  name: kiali
  namespace: kiali
spec:
  selector:
    app: kiali
  ports:
    - name: http
      port: 20001
      targetPort: 20001
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: kiali
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: kiali-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Kiali'
spec:
  ingressClassName: nginx
  rules:
    - host: kiali.karamjitbrar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001
  tls:
    - secretName: kiali-tls
      hosts:
        - kiali.karamjitbrar.com
